--- a/app/src/main/res/layout/activity_live_player.xml
+++ b/app/src/main/res/layout/activity_live_player.xml
@@ -128,7 +128,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_gift_nn"
-            android:layout_marginLeft="16dp"/>
+            android:layout_marginLeft="16dp"
+            android:layout_gravity="center_vertical"/>
+        <TextView
+            android:id="@+id/tv_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white_default"
+            android:textSize="22sp"
+            android:layout_gravity="center_vertical"/>
         <EditText
             android:id="@+id/et_send"
             android:layout_width="0dp"
