--- a/app/src/main/res/layout/activity_personal_setting.xml
+++ b/app/src/main/res/layout/activity_personal_setting.xml
@@ -11,6 +11,16 @@
         android:id="@+id/rl_name"
         android:layout_width="match_parent"
         android:layout_height="60dp">
+        <ImageView
+            android:id="@+id/iv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_centerVertical="true"
+            android:src="@drawable/global_btn_right"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/dp_13"/>
+
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
@@ -20,16 +30,19 @@
             android:gravity="center"
             android:layout_centerVertical="true"
             android:textSize="17sp"
-            android:layout_marginLeft="@dimen/dp_13"/>
-        <ImageView
-            android:id="@+id/iv_name"
+            android:layout_marginLeft="@dimen/dp_13"
+            android:layout_toLeftOf="@+id/iv_name"
+            android:layout_marginRight="@dimen/dp_15"/>
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="设置昵称"
+            android:textColor="@color/black_666666"
             android:gravity="center"
             android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/global_btn_right"
-            android:layout_marginRight="@dimen/dp_13"/>
+            android:textSize="17sp"
+            android:layout_marginLeft="@dimen/dp_13"
+            android:layout_marginRight="@dimen/dp_15"/>
         <View
             style="@style/LineGray"
             android:layout_marginLeft="@dimen/dp_13"
@@ -40,15 +53,18 @@
         android:id="@+id/rl_hand"
         android:layout_width="match_parent"
         android:layout_height="70dp">
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/iv_hand"
-            android:layout_width="@dimen/dp_40"
-            android:layout_height="@dimen/dp_40"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="设置头像"
+            android:textColor="@color/black_666666"
             android:gravity="center"
             android:layout_centerVertical="true"
+            android:textSize="17sp"
             android:layout_marginLeft="@dimen/dp_13"
-            android:src="@drawable/datouxiang_"/>
+            android:layout_marginRight="@dimen/dp_15"/>
         <ImageView
+            android:id="@+id/iv_touxiang"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -56,6 +72,17 @@
             android:layout_alignParentRight="true"
             android:src="@drawable/global_btn_right"
             android:layout_marginRight="@dimen/dp_13"/>
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/iv_hand"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_40"
+            android:gravity="center"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/dp_13"
+            android:src="@drawable/datouxiang_"
+            android:layout_toLeftOf="@+id/iv_touxiang"
+            android:layout_marginRight="@dimen/dp_15"/>
         <View
             style="@style/LineGray"
             android:layout_marginLeft="@dimen/dp_13"
