--- a/app/src/main/res/layout/activity_application.xml
+++ b/app/src/main/res/layout/activity_application.xml
@@ -74,7 +74,7 @@
                 <TextView
                     android:layout_width="62dp"
                     android:layout_height="wrap_content"
-                    android:text="邮箱地址"
+                    android:text="邮箱地址(选填)"
                     android:textSize="@dimen/sp_15"
                     android:textColor="@color/black_333333"
                     android:layout_marginBottom="3dp"/>
@@ -153,7 +153,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="邀请人(选填)"
+                    android:text="邀请码(选填)"
                     android:textSize="@dimen/sp_15"
                     android:textColor="@color/black_333333"
                     android:gravity="right"
@@ -172,8 +172,7 @@
                         android:textColor="@color/black_333333"
                         android:textSize="@dimen/sp_15"
                         android:gravity="center_vertical"
-                        android:paddingLeft="15dp"
-                        android:inputType="number"/>
+                        android:paddingLeft="15dp"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
