--- a/app/src/main/res/layout/activity_my_appointment.xml
+++ b/app/src/main/res/layout/activity_my_appointment.xml
@@ -16,8 +16,7 @@
         android:textSize="@dimen/sp_17"
         android:textColor="@color/black_666666"
         android:gravity="center"
-        android:visibility="gone"
-        />
+        android:visibility="gone"/>
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -26,19 +25,70 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_jinqi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp_18"
+                android:textColor="@color/black_333333"
+                android:text="近期开始"
+                android:layout_marginLeft="@dimen/dp_13"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tv_tishiOne"
+                    android:layout_width="wrap_content"
+                    android:layout_height="100dp"
+                    android:textSize="@dimen/sp_17"
+                    android:textColor="@color/black_666666"
+                    android:text="暂无数据"
+                    android:layout_centerInParent="true"
+                    android:visibility="gone"
+                    android:gravity="center"/>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerView_one"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="14dp" />
 
+            </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView_one"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="14dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp_18"
+                android:textColor="@color/black_333333"
+                android:text="全部预约"
+                android:layout_marginLeft="@dimen/dp_13"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                />
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tv_tishitwo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="100dp"
+                    android:textSize="@dimen/sp_17"
+                    android:textColor="@color/black_666666"
+                    android:text="暂无数据"
+                    android:layout_centerInParent="true"
+                    android:visibility="gone"
+                    android:gravity="center"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView_two"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="14dp" />
+            </RelativeLayout>
+
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
