--- a/app/src/main/res/layout/fragment_personl.xml
+++ b/app/src/main/res/layout/fragment_personl.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent"
     android:background="@color/white_default"
     android:orientation="vertical">
-    <include layout="@layout/item_login"
-        android:id="@+id/view_login"/>
+    <!-- <include layout="@layout/item_login"
+        android:id="@+id/view_login"/>-->
     <include layout="@layout/item_loading"
         android:id="@+id/loading"/>
     <RelativeLayout
@@ -56,7 +56,7 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="68dp"
                     android:layout_marginTop="19dp">
 
                     <de.hdodenhof.circleimageview.CircleImageView
@@ -97,6 +97,25 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="14dp"
                         android:src="@drawable/btn_quit_n" />
+                    <RelativeLayout
+                        android:id="@+id/ll_login"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/white_default">
+                        <TextView
+                            android:id="@+id/tv_login"
+                            android:clickable="true"
+                            android:layout_width="138dp"
+                            android:layout_height="50dp"
+                            android:background="@drawable/bg_sure"
+                            android:text="登录"
+                            android:textColor="@color/white_default"
+                            android:gravity="center"
+                            android:layout_centerInParent="true"
+                            android:textSize="17sp" />
+
+                    </RelativeLayout>
+
                 </RelativeLayout>
 
                 <View
