--- a/app/src/main/res/layout/activity_goods.xml
+++ b/app/src/main/res/layout/activity_goods.xml
@@ -7,6 +7,7 @@
     android:background="@color/white_default"
     tools:context=".ui.home.activity.GoodsDetailActivity">
     <com.microple.jademall.weight.ZoomScrollView
+        android:layout_above="@+id/ll_order"
         android:id="@+id/zoomScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,8 +21,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="350dp"
-                android:id="@+id/rl_zoom"
-                >
+                android:id="@+id/rl_zoom">
                 <ImageView
                     android:id="@+id/iv_zoom"
                     android:layout_width="match_parent"
@@ -33,6 +33,20 @@
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
                     android:src="@drawable/tuyiying_"/>
+                <VideoView
+                    android:id="@+id/video_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:visibility="gone"/>
+                <ImageView
+                    android:id="@+id/iv_player"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_play_n"
+                    android:layout_centerInParent="true"
+                    android:visibility="gone"
+                    />
                 <TextView
                     android:id="@+id/tv_title"
                     android:layout_width="wrap_content"
@@ -127,26 +141,7 @@
                         android:layout_marginBottom="17dp"
                         android:layout_marginLeft="@dimen/dp_13"
                         android:orientation="horizontal">
-                  <!--   <TextView
-                        android:id="@+id/tv_jifen"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="积分返还"
-                        android:textSize="@dimen/sp_12"
-                        android:textColor="@color/white_default"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="16dp"
-                        android:background="@drawable/bg_jifen"/>
-                    <TextView
-                        android:id="@+id/tv_tuihuo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="永久退货"
-                        android:textSize="@dimen/sp_12"
-                        android:textColor="@color/white_default"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="16dp"
-                        android:background="@drawable/bg_tuihuo"/>-->
+
                     </LinearLayout>
             <TextView
                 android:id="@+id/tv_type"
@@ -172,6 +167,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="尺寸：高 12mm ，宽 23，厚 23mm"
+                android:textSize="@dimen/sp_14"
+                android:textColor="@color/black_0B0827"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="@dimen/dp_10"/>
+            <TextView
+                android:id="@+id/tv_weigth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="重量:"
                 android:textSize="@dimen/sp_14"
                 android:textColor="@color/black_0B0827"
                 android:layout_centerVertical="true"
@@ -210,8 +215,9 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="28dp"
-                android:layout_marginBottom="28dp">
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_alignParentBottom="true">
                 <TextView
                     android:id="@+id/tv_price"
                     android:layout_width="wrap_content"
@@ -243,6 +249,7 @@
                     android:layout_toRightOf="@+id/tv_price"
                     android:layout_centerVertical="true"/>
             </RelativeLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -261,10 +268,77 @@
                 android:paddingBottom="14dp"
                 android:layout_marginRight="14dp"
                 android:layout_marginLeft="14dp"/>
+            <TextView
+                android:id="@+id/tv_tuijian"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="推荐产品"
+                android:textSize="@dimen/sp_17"
+                android:textColor="@color/black_333333"
+                android:textStyle="bold"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginBottom="21dp"/>
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="8dp"
+                android:paddingBottom="14dp"
+                android:layout_marginRight="14dp"
+                android:layout_marginLeft="14dp"
+                android:layout_marginBottom="@dimen/dp_14">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_recomend"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_14"
+                android:layout_marginRight="@dimen/dp_14"
+               />
+            </android.support.v7.widget.CardView>
 
         </LinearLayout>
 
     </com.microple.jademall.weight.ZoomScrollView>
+    <RelativeLayout
+        android:id="@+id/ll_order"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/tv_prices"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="RMB4567"
+            android:textSize="@dimen/sp_17"
+            android:textColor="#E6162D"
+            android:layout_marginLeft="16dp"
+            android:layout_centerVertical="true"/>
+        <TextView
+            android:id="@+id/tv_sures"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_sure"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/dp_16"
+            android:text="立即下单"
+            android:textSize="15sp"
+            android:textColor="@color/white_default"
+            android:layout_centerVertical="true"/>
+        <TextView
+            android:id="@+id/tv_others"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="选择其他编号"
+            android:textSize="@dimen/sp_15"
+            android:textColor="@color/green_06A366"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@+id/tv_prices"
+            android:layout_centerVertical="true"/>
+    </RelativeLayout>
     <include layout="@layout/view_loading"
         android:id="@+id/loading"/>
 
