--- a/app/src/main/res/layout/activity_live_player.xml
+++ b/app/src/main/res/layout/activity_live_player.xml
@@ -111,7 +111,7 @@
         android:id="@+id/iv_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_share_n"
+        android:src="@drawable/ic_share_live"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="75dp"
         android:layout_alignParentBottom="true"
@@ -150,6 +150,28 @@
             android:paddingLeft="10dp"/>
 
     </LinearLayout>
+    <RelativeLayout
+        android:id="@+id/ll_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/rl_message"
+        android:layout_marginLeft="@dimen/dp_15"
+        android:visibility="gone">
+        <TextView
+            android:id="@+id/tv_message"
+            android:layout_width="200dp"
+            android:layout_height="35dp"
+            android:background="@drawable/bg_live_message"
+            android:paddingLeft="40dp"
+            android:text="欢迎"
+            android:textColor="@color/white_default"
+            android:gravity="center_vertical"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_clapping"
+            android:layout_marginLeft="10dp"/>
+    </RelativeLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rl_message"
         android:layout_width="200dp"
