--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -197,6 +197,20 @@
                 android:layout_marginLeft="@dimen/dp_13"
                 android:layout_marginRight="@dimen/dp_13"/>
             <TextView
+                android:id="@+id/tv_send_type"
+                android:layout_width="wrap_content"
+                android:layout_height="38dp"
+                android:text="购买方式"
+                android:textColor="@color/black_444444"
+                android:textSize="@dimen/sp_13"
+                android:gravity="center"
+                android:layout_marginLeft="26dp"/>
+            <View
+                style="@style/LineGray"
+                android:layout_marginLeft="@dimen/dp_13"
+                android:layout_marginRight="@dimen/dp_13"/>
+
+            <TextView
                 android:id="@+id/tv_pick_type"
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
@@ -244,7 +258,32 @@
                 android:layout_marginLeft="@dimen/dp_13"
                 android:layout_marginRight="@dimen/dp_13"
                 android:visibility="gone"/>
-
+            <TextView
+                android:id="@+id/tv_wuliufeiyong"
+                android:layout_width="wrap_content"
+                android:layout_height="38dp"
+                android:text="物流费用"
+                android:textColor="@color/black_444444"
+                android:textSize="@dimen/sp_13"
+                android:gravity="center"
+                android:layout_marginLeft="26dp"/>
+            <View
+                style="@style/LineGray"
+                android:layout_marginLeft="@dimen/dp_13"
+                android:layout_marginRight="@dimen/dp_13" />
+            <TextView
+                android:id="@+id/tv_all_feiyong"
+                android:layout_width="wrap_content"
+                android:layout_height="38dp"
+                android:text="总支付费用"
+                android:textColor="@color/black_444444"
+                android:textSize="@dimen/sp_13"
+                android:gravity="center"
+                android:layout_marginLeft="26dp"/>
+            <View
+                style="@style/LineGray"
+                android:layout_marginLeft="@dimen/dp_13"
+                android:layout_marginRight="@dimen/dp_13" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
