--- a/app/src/main/res/layout/item_mycontection.xml
+++ b/app/src/main/res/layout/item_mycontection.xml
@@ -8,19 +8,28 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <android.support.v7.widget.CardView
+                android:id="@+id/cd_goodsImage"
+                android:layout_width="93dp"
+                android:layout_height="93dp"
+                android:layout_marginLeft="15dp"
+                app:cardCornerRadius="5dp"
+                android:layout_marginTop="@dimen/dp_10">
+
             <ImageView
                 android:id="@+id/iv_goodsImage"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="@dimen/dp_10"
-                android:layout_width="113dp"
-                android:layout_height="84dp"
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:src="@drawable/ic_img_default"
                 android:scaleType="fitXY" />
+            </android.support.v7.widget.CardView>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
-                android:layout_toRightOf="@+id/iv_goodsImage"
+                android:layout_toRightOf="@+id/cd_goodsImage"
                 android:layout_marginTop="@dimen/dp_10"
                 android:orientation="vertical">
                 <TextView
@@ -54,7 +63,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
                 android:background="@color/line_C8C7CC"
-                android:layout_below="@+id/iv_goodsImage"
+                android:layout_below="@+id/cd_goodsImage"
                 android:layout_marginTop="10dp"/>
 
         </RelativeLayout>
