--- a/app/src/main/res/layout/activity_im_order.xml
+++ b/app/src/main/res/layout/activity_im_order.xml
@@ -90,6 +90,36 @@
                 android:layout_marginTop="10dp"
                 android:visibility="gone"/>
             <TextView
+                android:id="@+id/tv_one"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="增值类型一：一年增值"
+                android:textColor="@color/black_0B0827"
+                android:textSize="@dimen/sp_14"
+                android:layout_marginLeft="@dimen/dp_13"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"/>
+            <TextView
+                android:id="@+id/tv_two"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="增值类型二：两年增值"
+                android:textColor="@color/black_0B0827"
+                android:textSize="@dimen/sp_14"
+                android:layout_marginLeft="@dimen/dp_13"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"/>
+            <TextView
+                android:id="@+id/tv_five"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="增值类型三：五年增值"
+                android:textColor="@color/black_0B0827"
+                android:textSize="@dimen/sp_14"
+                android:layout_marginLeft="@dimen/dp_13"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"/>
+            <TextView
                 android:id="@+id/tv_wuliu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
