--- a/app/src/main/res/layout/activity_pick_goods.xml
+++ b/app/src/main/res/layout/activity_pick_goods.xml
@@ -182,6 +182,32 @@
         style="@style/LineGray"
         android:layout_marginLeft="@dimen/dp_13"
         android:layout_marginRight="@dimen/dp_13"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_40"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dp_40"
+            android:text="运费"
+            android:textColor="@color/black_333333"
+            android:textSize="@dimen/sp_13"
+            android:gravity="center"
+            android:layout_marginLeft="26dp"/>
+        <TextView
+            android:id="@+id/tv_yunfei"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dp_40"
+            android:textColor="@color/black_444444"
+            android:textSize="@dimen/sp_13"
+            android:gravity="center"
+            android:layout_marginLeft="26dp"/>
+    </LinearLayout>
+    <View
+        style="@style/LineGray"
+        android:layout_marginLeft="@dimen/dp_13"
+        android:layout_marginRight="@dimen/dp_13"/>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
