--- a/app/src/main/res/layout/item_livemessage.xml
+++ b/app/src/main/res/layout/item_livemessage.xml
@@ -16,7 +16,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/sp_14"
-        android:textColor="#F9D98C"/>
+        android:textColor="#F9D98C"
+        android:background="@drawable/bg_duihua"/>
 
 
 </LinearLayout>
