--- a/app/src/main/res/layout/view_buy_type.xml
+++ b/app/src/main/res/layout/view_buy_type.xml
@@ -42,7 +42,27 @@
                 android:textColor="@color/blue_007AFF"
                 android:gravity="center"
                 android:textSize="@dimen/sp_17"
-                android:text="邮寄"/>
+                android:text="邮寄(运费现付)"/>
+        </LinearLayout>
+        <View
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/line_C8C7CC" />
+        <LinearLayout
+            android:id="@+id/ll_youji_dao"
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_alignParentBottom="true"
+            android:layout_height="50dp">
+            <TextView
+                android:id="@+id/tv_youji_dao"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="@color/blue_007AFF"
+                android:gravity="center"
+                android:textSize="@dimen/sp_17"
+                android:text="邮寄(运费到付)"/>
         </LinearLayout>
         <View
             android:layout_alignParentBottom="true"
@@ -146,7 +166,7 @@
                 android:textColor="@color/blue_007AFF"
                 android:gravity="center"
                 android:textSize="@dimen/sp_17"
-                android:text="五年存入翡翠柜"/>
+                android:text="五年积分增值"/>
         </LinearLayout>
     </LinearLayout>
 
