--- a/app/src/main/res/layout/activity_application.xml
+++ b/app/src/main/res/layout/activity_application.xml
@@ -56,7 +56,87 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="@color/line_C8C7CC"
+                        android:background="#EFEFF4"
+                        android:layout_gravity="bottom"
+                        android:layout_marginRight="5dp"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="27dp"
+                android:layout_marginLeft="23dp"
+                android:layout_marginRight="23dp">
+                <TextView
+                    android:layout_width="62dp"
+                    android:layout_height="wrap_content"
+                    android:text="联系电话"
+                    android:textSize="@dimen/sp_15"
+                    android:textColor="@color/black_333333"
+                    android:layout_marginBottom="3dp"/>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <EditText
+                        android:id="@+id/et_phone"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:background="@null"
+                        android:textSize="@dimen/sp_15"
+                        android:textColor="@color/black_333333"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="15dp"
+                        android:inputType="number"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#EFEFF4"
+                        android:layout_gravity="bottom"
+                        android:layout_marginRight="5dp"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="27dp"
+                android:layout_marginLeft="23dp"
+                android:layout_marginRight="23dp">
+                <TextView
+                    android:layout_width="62dp"
+                    android:layout_height="wrap_content"
+                    android:text="商家名称"
+                    android:textSize="@dimen/sp_15"
+                    android:textColor="@color/black_333333"
+                    android:layout_marginBottom="3dp"/>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <EditText
+                        android:id="@+id/et_sname"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:background="@null"
+                        android:textSize="@dimen/sp_15"
+                        android:textColor="@color/black_333333"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="15dp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#EFEFF4"
                         android:layout_gravity="bottom"
                         android:layout_marginRight="5dp"/>
 
@@ -96,53 +176,14 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="@color/line_C8C7CC"
+                        android:background="#EFEFF4"
                         android:layout_gravity="bottom"
                         android:layout_marginRight="5dp"/>
 
                 </LinearLayout>
 
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="27dp"
-                android:layout_marginLeft="23dp"
-                android:layout_marginRight="23dp">
-                <TextView
-                    android:layout_width="62dp"
-                    android:layout_height="wrap_content"
-                    android:text="联系电话"
-                    android:textSize="@dimen/sp_15"
-                    android:textColor="@color/black_333333"
-                    android:layout_marginBottom="3dp"/>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-                    <EditText
-                        android:id="@+id/et_phone"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@null"
-                        android:textSize="@dimen/sp_15"
-                        android:textColor="@color/black_333333"
-                        android:gravity="center_vertical"
-                        android:paddingLeft="15dp"
-                        android:inputType="number"/>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/line_C8C7CC"
-                        android:layout_gravity="bottom"
-                        android:layout_marginRight="5dp"/>
 
-                </LinearLayout>
-
-            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -176,13 +217,76 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="@color/line_C8C7CC"
+                        android:background="#EFEFF4"
                         android:layout_gravity="bottom"
                         android:layout_marginRight="5dp"/>
 
                 </LinearLayout>
 
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="27dp"
+                android:layout_marginLeft="23dp"
+                android:layout_marginRight="23dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="公司简介"
+                    android:textSize="@dimen/sp_15"
+                    android:textColor="@color/black_333333"
+                    android:gravity="right"
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginRight="5dp"/>
+
+                    <EditText
+                        android:id="@+id/tv_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:textSize="@dimen/sp_14"
+                        android:textColor="@color/black_333333"
+                        android:background="@drawable/bg_edit"
+                        android:hint="选填"
+                        android:padding="12dp"
+                        android:gravity="top"/>
+
+
+            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="商家头像"
+                android:textSize="23sp"
+                android:textColor="@color/black_333333"
+                android:layout_marginLeft="23dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="24dp"/>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="152dp"
+                android:layout_marginLeft="54dp"
+                android:layout_marginRight="54dp"
+                app:cardCornerRadius="5dp">
+                <RelativeLayout
+                    android:id="@+id/rl_sImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:id="@+id/iv_sImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="fitXY"/>
+                    <ImageView
+                        android:id="@+id/iv_add_sImage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/btn_addimg"
+                        android:layout_centerInParent="true"/>
+                </RelativeLayout>
+            </android.support.v7.widget.CardView>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
