--- a/app/src/main/res/layout/activity_pick_goods.xml
+++ b/app/src/main/res/layout/activity_pick_goods.xml
@@ -187,9 +187,10 @@
         android:layout_height="@dimen/dp_40"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/tv_type_yunfei"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dp_40"
-            android:text="运费"
+            android:text="运费现付"
             android:textColor="@color/black_333333"
             android:textSize="@dimen/sp_13"
             android:gravity="center"
