--- a/app/src/main/res/layout/activity_intergration_push.xml
+++ b/app/src/main/res/layout/activity_intergration_push.xml
@@ -117,7 +117,7 @@
                     android:textColor="@color/black_333333"
                     android:textSize="@dimen/sp_14" />
 
-                <EditText
+                <TextView
                     android:id="@+id/tv_dongjie"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
