--- a/app/src/main/res/layout/view_pay.xml
+++ b/app/src/main/res/layout/view_pay.xml
@@ -75,6 +75,30 @@
                 android:textSize="@dimen/sp_17"
                 android:text="积分支付"/>
         </LinearLayout>
+        <View
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/line_C8C7CC" />
+        <LinearLayout
+            android:id="@+id/ll_daifu"
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_alignParentBottom="true"
+            android:layout_height="50dp">
+            <TextView
+                android:id="@+id/tv_daifu"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textColor="@color/blue_007AFF"
+                android:layout_gravity="center"
+                android:drawablePadding="@dimen/dp_15"
+                android:drawableLeft="@drawable/daifu_"
+                android:gravity="center"
+                android:textSize="@dimen/sp_17"
+                android:text="他人代付"/>
+        </LinearLayout>
+
 
     </LinearLayout>
 
