--- a/app/src/main/res/layout/activity_daifu.xml
+++ b/app/src/main/res/layout/activity_daifu.xml
@@ -59,7 +59,8 @@
                     android:hint="请输入对方账号"
                     android:textColor="@color/black_333333"
                     android:textColorHint="#BBBBBB"
-                    android:textSize="@dimen/sp_15" />
+                    android:textSize="@dimen/sp_15"
+                    android:inputType="number"/>
 
                 <View
                     style="@style/LineGray"
@@ -121,7 +122,7 @@
                 android:layout_marginBottom="@dimen/dp_15"/>
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView"
+                android:id="@+id/rc_daifu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/dp_13"
