--- a/app/src/main/res/layout/item_livemessage.xml
+++ b/app/src/main/res/layout/item_livemessage.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_marginBottom="3dp">
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
