--- a/app/src/main/res/layout/view_pay.xml
+++ b/app/src/main/res/layout/view_pay.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <LinearLayout
+        android:id="@+id/ll_tyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_white_side_black_r5"
