--- a/app/src/main/res/layout/view_buy_type.xml
+++ b/app/src/main/res/layout/view_buy_type.xml
@@ -5,118 +5,122 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <LinearLayout
+        android:id="@+id/ll_buy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_white_side_black_r5"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_alignParentBottom="true"
             android:layout_height="50dp">
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="49dp"
                 android:textColor="@color/black_333333"
                 android:gravity="center"
                 android:textSize="@dimen/sp_17"
                 android:textStyle="bold"
                 android:text="请选择购买方式"/>
+            <View
+                android:layout_alignParentBottom="true"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/line_C8C7CC" />
         </LinearLayout>
-        <View
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/line_C8C7CC" />
+
 
         <LinearLayout
             android:id="@+id/ll_youji"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_alignParentBottom="true"
             android:layout_height="50dp">
             <TextView
                 android:id="@+id/tv_youji"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="49dp"
                 android:textColor="@color/blue_007AFF"
                 android:gravity="center"
                 android:textSize="@dimen/sp_17"
                 android:text="邮寄(运费现付)"/>
+            <View
+                android:layout_alignParentBottom="true"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/line_C8C7CC" />
+
         </LinearLayout>
-        <View
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/line_C8C7CC" />
         <LinearLayout
             android:id="@+id/ll_youji_dao"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_alignParentBottom="true"
             android:layout_height="50dp">
             <TextView
                 android:id="@+id/tv_youji_dao"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="49dp"
                 android:textColor="@color/blue_007AFF"
                 android:gravity="center"
                 android:textSize="@dimen/sp_17"
                 android:text="邮寄(运费到付)"/>
+            <View
+                android:layout_alignParentBottom="true"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/line_C8C7CC" />
         </LinearLayout>
-        <View
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/line_C8C7CC" />
 
         <LinearLayout
             android:id="@+id/ll_zhibo"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_alignParentBottom="true"
             android:layout_height="50dp">
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="49dp"
                 android:textColor="@color/blue_007AFF"
                 android:gravity="center"
                 android:textSize="@dimen/sp_17"
                 android:text="预约切石直播"/>
+            <View
+                android:layout_alignParentBottom="true"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/line_C8C7CC" />
+
         </LinearLayout>
-        <View
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/line_C8C7CC" />
 
         <LinearLayout
             android:id="@+id/ll_feicui"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_alignParentBottom="true"
             android:layout_height="50dp">
             <TextView
                 android:id="@+id/tv_feicui"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="49dp"
                 android:textColor="@color/blue_007AFF"
                 android:gravity="center"
                 android:textSize="@dimen/sp_17"
                 android:text="存入翡翠柜"/>
+            <View
+                android:layout_alignParentBottom="true"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/line_C8C7CC" />
         </LinearLayout>
-        <View
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/line_C8C7CC" />
 
         <LinearLayout
             android:id="@+id/ll_one"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_alignParentBottom="true"
-            android:layout_height="50dp">
+            android:layout_height="49dp">
             <TextView
                 android:id="@+id/tv_one"
                 android:layout_width="match_parent"
@@ -125,38 +129,40 @@
                 android:gravity="center"
                 android:textSize="@dimen/sp_17"
                 android:text="一年积分增值"/>
+            <View
+                android:layout_alignParentBottom="true"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/line_C8C7CC" />
+
         </LinearLayout>
-        <View
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/line_C8C7CC" />
 
         <LinearLayout
             android:id="@+id/ll_two"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_alignParentBottom="true"
             android:layout_height="50dp">
             <TextView
                 android:id="@+id/tv_two"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="49dp"
                 android:textColor="@color/blue_007AFF"
                 android:gravity="center"
                 android:textSize="@dimen/sp_17"
                 android:text="两年积分增值"/>
+            <View
+                android:layout_alignParentBottom="true"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/line_C8C7CC" />
+
         </LinearLayout>
-        <View
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/line_C8C7CC" />
 
         <LinearLayout
             android:id="@+id/ll_five"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_alignParentBottom="true"
             android:layout_height="50dp">
             <TextView
